--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "20.19.6",
     "@types/react": "19.1.8",
     "@types/react-dom": "^19",
+    "eslint": "^9.37.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
