--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "^19",
     "eslint": "^9.37.0",
+    "eslint-config-next": "^15.5.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
