--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "geist": "^1.5.1",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.24",
     "next": "^15.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
